--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav>
+    <nav class="light-green darken-2">
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo">DiNotes</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="something.html">Link</a></li>
+            </ul>
+        </div>
     </nav>
     Hello! This is DiNotes!
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
