--- a/client/index.html
+++ b/client/index.html
@@ -21,18 +21,18 @@
             </ul>
         </div>
     </nav>
-    <div class="row" style="height: 90%;">
+    <div class="row" style="height: 90%; margin-top:1%;">
         <div class="col s8" style="height:100%">
             <div class="row" style="height:100%">
                 <div class="col s12">
                     <ul class="tabs">
-                        <li class="tab col s3"><a href="#doc-spec">Document Specimens</a></li>
+                        <li class="tab col s3"><a  href="#spec">Specimens</a></li>
                         <li class="tab col s3"><a href="#test2">Excavation Site Map</a></li>
                         <li class="tab col s3 disabled"><a href="#test3">Resources & Team</a></li>
                     </ul>
                 </div>
-                <div id="doc-spec" class="col s12">
-                    <div class="row" id="doc-spec-new">
+                <div id="spec" class="col s12">
+                    <div class="row" id="spec-new">
                         <div class="card">
                             <div class="card-content">
                                 <span class="card-title black-text">Document a New Specimen</span>
@@ -43,22 +43,22 @@
                         </div>
                     </div>
                 
-                    <div class="row doc-spec-entry">
+                    <div class="row spec-entry">
                         <div class="card" style="height:100%">
                             <div class="card-content">
                                 <span class="card-title black-text">Specimen Name</span>
-                                <div class="doc-spec-entry-info">
-                                    Time
-                                    Date
+                                <div class="spec-entry-info">
+                                    Time <br>
+                                    Date <br>
                                     Location: 60 Lat 170 Long (see on map)
                                 </div>
-                                <div class="doc-spec-entry-photos">
-                                    <img class="doc-spec-entry-photo" src="./pics/german dinosaur.jpg">
-                                    <img class="doc-spec-entry-photo" src="./pics/german dinosaur.jpg">
-                                    <img class="doc-spec-entry-photo" src="./pics/german dinosaur.jpg">
-                                    <img class="doc-spec-entry-photo" src="./pics/german dinosaur.jpg">
+                                <div class="spec-entry-photos">
+                                    <img class="spec-entry-photo" src="./pics/german dinosaur.jpg">
+                                    <img class="spec-entry-photo" src="./pics/german dinosaur.jpg">
+                                    <img class="spec-entry-photo" src="./pics/german dinosaur.jpg">
+                                    <img class="spec-entry-photo" src="./pics/german dinosaur.jpg">
                                 </div>
-                                <div class="doc-spec-entry-notes">
+                                <div class="spec-entry-notes">
                                 Puertasaurus Chuanjiesaurus Symphyrophus Bistahieversor Saurornithoides Pneumatoraptor Rinchenia Ampelosaurus Eosinopteryx Nodocephalosaurus Valdoraptor Genusaurus Nemegtosaurus Huabeisaurus Syngonosaurus Leptoceratops Hypsirophus Denversaurus Szechuanosaurus Pteropelyx Therizinosaurus Arstanosaurus Cylindricodon Scutellosaurus Traukutitan Sphaerotholus Brachylophosaurus Anserimimus Jaxartosaurus Vitakrisaurus Atacamatitan Variraptor Krzyzanowskisaurus Archaeornithoides Barilium Sanpasaurus Nipponosaurus Leyesaurus Tianyuraptor Gigantosaurus Utahceratops Borogovia Australovenator Polyodontosaurus Allosaurus Dashanpusaurus Clepsysaurus Gasosaurus Chialingosaurus Ruyangosaurus Hexing Vitakridrinda Dyoplosaurus Phyllodon Sauraechinodon Calamosaurus Nigersaurus Adamantisaurus Pterospondylus Petrobrasaurus Shuvuuia Pekinosaurus Kuszholia Ignavusaurus Cerasinops Jinzhousaurus Carnotaurus Laosaurus Appalachiosaurus Hypsibema Koreaceratops Quaesitosaurus Hallopus Scipionyx Chirostenotes
                                 </div>
                             </div>
@@ -71,18 +71,20 @@
         </div>
 
         <div class="col s4">
-            <h3>Checklist</h3>
+            <h5 style="text-transform: uppercase;letter-spacing: .8px; color:#689f38;">Checklist</h5>
             <div class="card">
                 <div class="card-content">
                     <form action="#">
-                        <p>
-                            <input type="checkbox" id="testbox1"/>
-                            <label for="testbox1">Add node modules to .gitignore!!!</label>
-                        </p>
-                        <p>
-                            <input type="checkbox" class="filled-in" id="filled-in-box"/>
-                            <label for="filled-in-box">sudo apt-get purge emacs</label>
-                        </p>
+                            <p>
+                                <input type="checkbox" class="filled-in" id="testbox1"/>
+                                <label for="testbox1">Add node modules to .gitignore!!! </label>
+                                <span class="badge">Added 6/7/15 6:00PM</span>
+                            </p> 
+                            <p>
+                                <input type="checkbox" class="filled-in" id="filled-in-box"/>
+                                <label for="filled-in-box">sudo apt-get purge emacs</label>
+                                <span class="new badge">Added 6/7/15 7:00PM</span>
+                            </p>
                     </form>
                 </div>
             </div>
