--- a/client/index.html
+++ b/client/index.html
@@ -129,7 +129,7 @@
                                     </div>
                                 </div>
                                 <div class="col s4 spec-entry-photos">
-                                    <img class="spec-entry-photo materialboxed" src="./pics/german dinosaur.jpg">
+                                    <img class="spec-entry-photo-big materialboxed" src="./pics/german dinosaur.jpg">
                                     <img class="spec-entry-photo materialboxed" src="./pics/german dinosaur.jpg">
                                     <img class="spec-entry-photo materialboxed" src="./pics/german dinosaur.jpg">
                                     <img class="spec-entry-photo materialboxed" src="./pics/german dinosaur.jpg">
@@ -155,7 +155,7 @@
                                     </div>
                                 </div>
                                 <div class="col s4 spec-entry-photos">
-                                    <img class="spec-entry-photo materialboxed" src="./pics/german dinosaur.jpg">
+                                    <img class="spec-entry-photo-big materialboxed" src="./pics/german dinosaur.jpg">
                                     <img class="spec-entry-photo materialboxed" src="./pics/german dinosaur.jpg">
                                     <img class="spec-entry-photo materialboxed" src="./pics/german dinosaur.jpg">
                                     <img class="spec-entry-photo materialboxed" src="./pics/german dinosaur.jpg">
@@ -174,6 +174,10 @@
             <h5>Checklist</h5>
             <div class="card">
                 <div class="card-content">
+                    <div class="input-field">
+                        <input type="text">
+                        <label for"">New Task</label>
+                    </div>
                     <form action="#">
                             <p>
                                 <input type="checkbox" class="filled-in" id="check1"/>
