--- a/client/index.html
+++ b/client/index.html
@@ -100,6 +100,9 @@
                                                         <label for="">Notes</label>
                                                     </div>
                                                 </div>
+                                                <div class="row">
+                                                    <a class="waves-effect waves-light btn light-green darken-4"><i class="material-icons right" id="new-spec-btn">pets</i>Submit</a>
+                                                </div>
                                             </form>
                                         </div>
                                     </li>
