hooking up form to database

--- a/client/index.html
+++ b/client/index.html
@@ -55,53 +55,53 @@
                                         <div class="collapsible-header">
                                             <h5>Document a New Specimen</h5>
                                             <div class="input-field">
-                                                <input placeholder="Tyrannosaurus rex" type="text" id="new-spec-name">
+                                                 <input class="speciman-card-input"<input placeholder="Tyrannosaurus rex" type="text" id="speciman-caspeciman-name">
                                             </div>
                                         </div>
                                         <div class="row doc-new-spec collapsible-body">
                                             <form class="col s12">
                                                <div class="row">
                                                     <div class="input-field col s12">
-                                                        <input id="" type="text" placeholder="Djadohta Formation">
+                                                        <input class="speciman-card-input" id="speciman-card-locality" type="text" placeholder="djadohta formation">
                                                         <label for="">Locality</label>
                                                     </div>
                                                 </div>
                                                 <div class="row">
                                                     <div class="input-field col s6">
-                                                        <input id="" type="text">
+                                                        <input class="speciman-card-input" id="speciman-card-latitude" type="text">
                                                         <label for="">Latitude</label>
                                                     </div>
                                                     <div class="input-field col s6">
-                                                        <input id="" type="text">
+                                                        <input class="speciman-card-input" id="speciman-card-longitude" type="text">
                                                         <label for="">Longitude</label>
                                                     </div>
                                                 </div>
                                                 <div class="row">
                                                     <div class="input-field col s6">
-                                                        <input id="" type="text">
+                                                        <input class="speciman-card-input" id="speciman-card-date-collected" type="text">
                                                         <label for="">Date Collected</label>
                                                     </div>
                                                     <div class="input-field col s6">
-                                                        <input id="" type="text">
+                                                        <input class="speciman-card-input" id="speciman-card-collector-name" type="text">
                                                         <label for="">Collector</label>
                                                     </div>
                                                 </div>
 
                                                 <div class="row">
                                                     <div class="input-field col s12">
-                                                        <input id="" type="text" placeholder="Oviraptor Egg">
+                                                        <input class="speciman-card-input" id="speciman-card-components" type="text" placeholder="oviraptor egg">
                                                         <label for="">Components</label>
                                                     </div>
                                                 </div>
- 
+
                                                 <div class="row">
                                                     <div class="input-field col s12">
-                                                        <input id="" type="text">
+                                                        <input class="speciman-card-input" id="speciman-card-notes" type="text">
                                                         <label for="">Notes</label>
                                                     </div>
                                                 </div>
                                                 <div class="row">
-                                                    <a class="waves-effect waves-light btn light-green darken-4"><i class="material-icons right" id="new-spec-btn">pets</i>Submit</a>
+                                                    <a class="submit-speciman-card waves-effect waves-light btn light-green darken-4"><i class="material-icons right" id="new-spec-btn">pets</i>Submit</a>
                                                 </div>
                                             </form>
                                         </div>
@@ -118,7 +118,7 @@
                             <div class="card-content">
                                 <div class="row">
                                     <h5 class="card-title">Specimen Name</h5>
-                                
+
                                 </div>
                                 <div class="row">
                                 <div class="col s8 spec-entry-info">
@@ -127,7 +127,7 @@
                                     <strong>Location</strong> 60 Lat 170 Long (see on map) <br>
                                     <strong>Notes</strong>
                                     <div class="spec-entry-notes">
-                                        Puertasaurus Chuanjiesaurus Symphyrophus Bistahieversor Saurornithoides Pneumatoraptor Rinchenia Ampelosaurus Eosinopteryx Nodocephalosaurus Valdoraptor 
+                                        Puertasaurus Chuanjiesaurus Symphyrophus Bistahieversor Saurornithoides Pneumatoraptor Rinchenia Ampelosaurus Eosinopteryx Nodocephalosaurus Valdoraptor
                                     </div>
                                 </div>
                                 <div class="col s4 spec-entry-photos">
@@ -144,7 +144,7 @@
                             <div class="card-content">
                                 <div class="row">
                                     <h5 class="card-title">Specimen Name</h5>
-                                
+
                                 </div>
                                 <div class="row">
                                 <div class="col s8 spec-entry-info">
@@ -153,7 +153,7 @@
                                     <strong>Location</strong> 60 Lat 170 Long (see on map) <br>
                                     <strong>Notes</strong>
                                     <div class="spec-entry-notes">
-                                        Puertasaurus Chuanjiesaurus Symphyrophus Bistahieversor Saurornithoides Pneumatoraptor Rinchenia Ampelosaurus Eosinopteryx Nodocephalosaurus Valdoraptor 
+                                        Puertasaurus Chuanjiesaurus Symphyrophus Bistahieversor Saurornithoides Pneumatoraptor Rinchenia Ampelosaurus Eosinopteryx Nodocephalosaurus Valdoraptor
                                     </div>
                                 </div>
                                 <div class="col s4 spec-entry-photos">
@@ -212,5 +212,6 @@
     <script src="./bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/Materialize/dist/js/materialize.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/server-speak.js"></script>
 </body>
 </html>
