link to homepage

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 
     <nav class="light-green darken-4">
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Dinotes</a>
+            <a href="http://10.20.65.3:3000/" class="brand-logo">Dinotes</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="#">Link</a></li>
