--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Dinotes</title>
@@ -167,7 +167,11 @@
                         </div>
                     </div>
                 </div>
-                <div id="test2" class="col s12">Excavation Site Map</div>
+
+                <div id="test2" class="col s12">
+                    <div id="map" class="card"></div>
+                </div>
+
                 <div id="test3" class="col s12">Resources &amp; Team</div>
             </div>
         </div>
@@ -213,5 +217,24 @@
     <script src="bower_components/Materialize/dist/js/materialize.min.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/server-speak.js"></script>
+
+    <script type="text/javascript">
+        var map;
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: {
+                    lat: -34.397, lng: 150.644},
+                    zoom: 8
+                });
+            // Resize stuff...
+            google.maps.event.addDomListener(window, "resize", function() {
+                var center = map.getCenter();
+                google.maps.event.trigger(map, "resize");
+                map.setCenter(center); 
+            });
+        }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY_HERE&callback=initMap">
+    </script>
 </body>
 </html>
