Just woke up, have no idea what's in this commit but git told me to commit it

--- a/client/index.html
+++ b/client/index.html
@@ -237,7 +237,7 @@
             document.getElementById('checklist').style.display = 'none';
         }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY_HERE&callback=initMap">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApx5EouvLrMRqKDo9Ds5XLC9zXUzAyZmw&callback=initMap">
     </script>
 </body>
 </html>
