--- a/client/index.html
+++ b/client/index.html
@@ -100,6 +100,13 @@
                                                         <label for="">Notes</label>
                                                     </div>
                                                 </div>
+
+                                                <div class="row">
+                                                    <div class="input-field col s12">
+                                                        <input class="speciman-card-input" id="speciman-card-img" type="file" capture="camera" accept"image/*">
+                                                    </div>
+                                                </div>
+
                                                 <div class="row">
                                                     <a class="submit-speciman-card waves-effect waves-light btn light-green darken-4"><i class="material-icons right" id="new-spec-btn">pets</i>Submit</a>
                                                 </div>
@@ -209,6 +216,21 @@
         </div>
 
     </div>
+
+      <!-- Login Modal -->
+      <div id="modal1" class="modal">
+       <div class="modal-content">
+          <h4>Register</h4>
+          <input type="text" class="dino-reg-login-input" id="user"/>
+          <label for="dino-username">username</label>
+          <input type="text" class="dino-reg-login-input" id="pass"/>
+          <label for="dino-password">password</label>
+
+       </div>
+       <div class="modal-footer">
+          <a href="#!" class="dino-reg-login modal-action modal-close waves-effect waves-green btn-flat">Register & Login</a>
+       </div>
+      </div>
 
     <!--  For Electron -->
     <script>
