--- a/client/index.html
+++ b/client/index.html
@@ -90,7 +90,7 @@
 
                                                 <div class="row">
                                                     <div class="input-field col s12">
-                                                        <input class="speciman-card-input" id="speciman-card-img" type="file" capture="camera" accept"image/*">
+                                                        <input class="img-upload" id="speciman-card-img" type="file" capture="camera" accept"image/*">
                                                     </div>
                                                 </div>
 
@@ -220,10 +220,10 @@
       </div>
 
     <!--  For Electron -->
-    <script>
+    <!-- <script>
       window.$ = window.jQuery = require('./bower_components/jquery/dist/jquery.min.js');
       window.Hammer = require('./bower_components/Materialize/js/hammer.min.js');
-    </script>
+    </script> -->
     <!--  For Normal Broswers -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/Materialize/dist/js/materialize.min.js"></script>
